--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
     --light-grey: #f5f6f7;
-    --dark-blue: #0a0a23;
+    --dark-blue: #c1c1e9;
     --fcc-blue: #1b1b32;
-    --light-yellow: #fecc4c;
-    --dark-yellow: #feac32;
+    --light-blue: #4cb7fe;
+    --dark-blue: #48acef;
     --light-red: #ffadad;
     --dark-red: #850000;
     --light-green: #acd157;
@@ -44,15 +44,16 @@
   button {
     cursor: pointer;
     text-decoration: none;
-    background-color: var(--light-yellow);
-    border: 2px solid var(--dark-yellow);
+    background-color: var(--light-blue);
+    border: 2px solid var(--dark-blue);
   }
   
-  button,
-  input,
-  select {
+  button {
     min-height: 24px;
-    color: var(--dark-blue);
+    color: var(--light-grey);
+  }
+  select, input {
+    color: var(--fcc-blue);
   }
   
   fieldset,
